--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,6 +104,8 @@ button:hover {
 #score-lista {
     list-style: none;
     padding: 0;
+    max-height: 200px;
+    overflow-y: auto;
 }
 
 #score-lista li {
